Bug 423598 - Preset editor shows Match tag:(I18N_ARGUMENT_MISSING) for all values in the constraint tree
Summary: Preset editor shows Match tag:(I18N_ARGUMENT_MISSING) for all values in the c...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlists/Automated Playlist Generator (other bugs)
Version First Reported In: kf5
Platform: Ubuntu Linux
: NOR normal
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-27 21:04 UTC by robert marshall
Modified: 2021-02-13 08:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description robert marshall 2020-06-27 21:04:47 UTC
SUMMARY


STEPS TO REPRODUCE
1. Go into APG and select any of the example AGP and edit
2. I expect that the values in the constraint tree look like the values in the editable form but they all have I18N_ARGUMENT_MISSING as placeholders
3. Running the AGP works - it is just the value display that is wrong.




SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
.. from Pedro's ppa
Comment 1 robert marshall 2020-07-10 14:42:10 UTC
When displaying the dialog the output shows the message
kf5.ki18n: "0 instead of 4 arguments to message {Match tag:%1 %2 %3 %...} supplied before conversion."

which suggests TagMatch.cpp is the problem and maybe the 55f143b8af8 commit - am looking further.
Comment 2 Pino Toscano 2021-02-13 08:06:09 UTC
Git commit a0433cbec23ce9d1ec85323c6b7ffcf193f9aae3 by Pino Toscano.
Committed on 13/02/2021 at 08:06.
Pushed by pino into branch 'master'.

Properly use KLocalizedString for dynamic placeholder replacement

M  +9    -9    src/playlistgenerator/constraints/Checkpoint.cpp
M  +13   -10   src/playlistgenerator/constraints/TagMatch.cpp

https://invent.kde.org/multimedia/amarok/commit/a0433cbec23ce9d1ec85323c6b7ffcf193f9aae3