Properly use KLocalizedString for dynamic placeholder replacement

BUG: 423598